# ChangeLog for app-editors/e3
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/e3/ChangeLog,v 1.12 2005/01/01 13:23:04 eradicator Exp $

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> e3-2.41.ebuild,
  e3-2.42.ebuild, e3-2.43.ebuild:
  sync IUSE (+build)

*e3-2.43 (22 Apr 2003)

  22 Apr 2003; Jon Portnoy <avenj@gentoo.org> e3-2.43.ebuild :

  Version bump.

*e3-2.42 (29 March 2003)

  29 March 2003; Jon Portnoy <avenj@gentoo.org> e3-2.42.ebuild :

  Version bump.

*e3-2.41 (02 March 2003)

  02 March 2003; Jon Portnoy <avenj@gentoo.org> e3-2.41.ebuild :

  Version bump.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*e3-2.33 (23 May 2002)

  26 Sep 2002; Ryan Phillips <rphillips@gentoo.org> e3-2.33.ebuild :

  Added nostrip option and added patch.. Fixes #2937

  23 May 2002; Ryan Phillips <rphillips@gentoo.org> e3-2.33.ebuild :

  Updated Package. Fixes #2937

*e3-1.7-r2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.