@@ -13,6 +13,7 @@ SHA256 00b98417b4a857e237ad9d6f8c66e0637f6a93274f664ff9341ac74607059a35 files/vi
 DIST e3-2.41.tar.gz 215121
 DIST e3-2.42.tar.gz 215392
 DIST e3-2.43.tar.gz 215540
+DIST e3-2.7.0.tar.gz 239477 RMD160 4faf15dff1b44ed15faad1946c56aed13f12373c SHA1 6e3b19782ea2ecda23a4fe45b4ae6709b76312cb SHA256 ab45362282b3b3e987ef40a0c6b300aa7267fcc0bb1f9879d09bbb6445eec18d
 EBUILD e3-2.41.ebuild 966 RMD160 1bdfa4aee2499de9acd8d046d19b2d69f2f49a99 SHA1 794bce1584430d7ab3c9e61ba56761ecdc8b1dfa SHA256 116f4edaea47fcdb0379f47b5b8127a47c98eecceadef483ad27dc43a389bd35
 MD5 ef1951a0288a819bf31d68774e1e4254 e3-2.41.ebuild 966
 RMD160 1bdfa4aee2499de9acd8d046d19b2d69f2f49a99 e3-2.41.ebuild 966
@@ -25,10 +26,14 @@ EBUILD e3-2.43.ebuild 963 RMD160 37e66c042d3a7899881fb3c76425d54a88b6c4aa SHA1 e
 MD5 92656ffeb0824f6a3179b60415448868 e3-2.43.ebuild 963
 RMD160 37e66c042d3a7899881fb3c76425d54a88b6c4aa e3-2.43.ebuild 963
 SHA256 5351fda838a03918ba211f9fcc4c2a3f777c262b08c42cfc0fb8a8b19746313a e3-2.43.ebuild 963
-MISC ChangeLog 1439 RMD160 1afbc88216b1f565c860aa8e199eb4b3720d301e SHA1 40ff24bcbde5be68a8bac1e8879786e19b7ba773 SHA256 6ac56119e2a0e095f2b268e47fc038e7279a4f04d8660d03601abfc570035bf7
-MD5 b4c15f7d23bf297f052a9c2d47e30ec9 ChangeLog 1439
-RMD160 1afbc88216b1f565c860aa8e199eb4b3720d301e ChangeLog 1439
-SHA256 6ac56119e2a0e095f2b268e47fc038e7279a4f04d8660d03601abfc570035bf7 ChangeLog 1439
+EBUILD e3-2.7.0.ebuild 935 RMD160 c66b8f5788ec340618c0a2609ed74223f055d63a SHA1 7cfc3499ebdd753accd0cfb7e665307c6dc87342 SHA256 e9962d7741a7759b28ac88561c3ea24c97941ff5da2c838858788874aa8f84cd
+MD5 49a4bc36bd1dc00c34640af380e07744 e3-2.7.0.ebuild 935
+RMD160 c66b8f5788ec340618c0a2609ed74223f055d63a e3-2.7.0.ebuild 935
+SHA256 e9962d7741a7759b28ac88561c3ea24c97941ff5da2c838858788874aa8f84cd e3-2.7.0.ebuild 935
+MISC ChangeLog 1616 RMD160 155bd7bba64873dfe6011df49c9f49524e8b7ae8 SHA1 80c3c0bd4de80dfba30e7e33bc96254bf511a98b SHA256 dab4d98e3061354297e7eefac27a8c77bf6cf44ba37739130ca63d3eefabbde2
+MD5 1950096d5cc8f8e7a484f95d7d6f2683 ChangeLog 1616
+RMD160 155bd7bba64873dfe6011df49c9f49524e8b7ae8 ChangeLog 1616
+SHA256 dab4d98e3061354297e7eefac27a8c77bf6cf44ba37739130ca63d3eefabbde2 ChangeLog 1616
 MISC metadata.xml 210 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 SHA1 efa00493ddec7289a21bc4cbcc6e95ec4de749d5 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39
 MD5 c667f921ee8d48ce17ebef0f8d601ea4 metadata.xml 210
 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 metadata.xml 210
@@ -42,3 +47,6 @@ SHA256 047f6e5dc7a3c4bcc4c7aa8326281129076cb6e9959ca020ea5345d0df9df4b2 files/di
 MD5 c8e059d80a0ac11919ef2f0a4c5bb5b4 files/digest-e3-2.43 59
 RMD160 3bf9c010831a567c8c0394870a770068226c58f2 files/digest-e3-2.43 59
 SHA256 471e391b66da2f9cecacc98481d550a4bfd0d01e74253be38b475b114aa4a721 files/digest-e3-2.43 59
+MD5 f923c7a6d87d2a088fb65df86e63755e files/digest-e3-2.7.0 226
+RMD160 b83e6d94c231a49e64c510639ea4ae264033d3f4 files/digest-e3-2.7.0 226
+SHA256 bd19b6f3a1f147928342c58b5c7b678ac9d61855ae1aa4de3e9443d536afb7b3 files/digest-e3-2.7.0 226
