@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/e3
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/e3/ChangeLog,v 1.12 2005/01/01 13:23:04 eradicator Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/e3/ChangeLog,v 1.13 2006/12/07 21:43:22 masterdriverz Exp $
+
+*e3-2.7.0 (07 Dec 2006)
+
+  07 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org> +e3-2.7.0.ebuild:
+  Bump to version 2.7.0, thanks to Brian Hall for reporting, bug 85114
 
   29 Jun 2004; Aron Griffis <agriffis@gentoo.org> e3-2.41.ebuild,
   e3-2.42.ebuild, e3-2.43.ebuild:
